--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -20,7 +20,17 @@ dependencies:
   auto_route: ^4.2.1
   modal_bottom_sheet: ^2.1.0
   flutter_svg: ^1.1.1+1
-  riverpod: ^1.0.3
+  firebase_core: ^1.22.0
+  firebase_crashlytics: ^2.8.10
+  firebase_remote_config: ^2.0.17
+  firebase_analytics: ^9.3.4
+  shared_preferences: ^2.0.15
+  flutter_riverpod: ^2.0.0-dev.9
+  cached_network_image: ^3.2.2
+  json_annotation: ^4.6.0
+  freezed_annotation: ^2.1.0
+  auto_size_text: ^3.0.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +40,9 @@ dev_dependencies:
   auto_route_generator: ^4.2.0
   build_runner: ^2.1.11
   flutter_gen_runner: ^4.3.0
+  freezed: ^2.1.0+1
+  flutter_gen: ^4.3.0
+  json_serializable: ^6.3.1
 
 flutter:
   uses-material-design: true
