--- a/mobile/codeblurb/android/app/build.gradle
+++ b/mobile/codeblurb/android/app/build.gradle
@@ -23,7 +23,11 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
+
+
 
 android {
     compileSdkVersion flutter.compileSdkVersion
@@ -43,11 +47,11 @@ android {
     }
 
     defaultConfig {
+        minSdkVersion 23     
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.codeblurb"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
