--- a/backend/codeblurb-backend/src/main/resources/application.yml
+++ b/backend/codeblurb-backend/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
   datasource:
     url: jdbc:mysql://localhost:3306/codeblurb?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true
     username: root
@@ -12,3 +14,7 @@ spring:
       ddl-auto: update
     show-sql: false
     generate-ddl: true
+codeblurb:
+  secret-key: CodeBlurbSecretKey1234
+
+
