--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   freezed_annotation: ^2.1.0
   auto_size_text: ^3.0.0
   dio: ^4.0.6
+  flutter_highlight: ^0.7.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
