--- a/backend/codeblurb-backend/build.gradle
+++ b/backend/codeblurb-backend/build.gradle
@@ -25,12 +25,13 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation "org.mapstruct:mapstruct:1.5.2.Final"
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.2.Final"
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
     testRuntimeOnly 'com.h2database:h2'
 }
 
