--- a/backend/codeblurb-backend/src/test/resources/application.yml
+++ b/backend/codeblurb-backend/src/test/resources/application.yml
@@ -7,3 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
+logging:
+  level:
+    org.hibernate.sql: debug
+    org.hibernate.type.descriptor.sql: trace
