--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^4.0.6
   flutter_highlight: ^0.7.0
   google_fonts: ^3.0.1
+  pretty_dio_logger: ^1.2.0-beta-1
 
 dev_dependencies:
   flutter_test:
