--- a/backend/codeblurb-backend/build.gradle
+++ b/backend/codeblurb-backend/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'hu.codeblurb'
-version = '0.0.1-SNAPSHOT'
+version = '0.2'
 sourceCompatibility = '17'
 
 configurations {
@@ -23,7 +23,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
