--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   freezed_annotation: ^2.1.0
   auto_size_text: ^3.0.0
   dio: ^4.0.6
-  flutter_highlight: ^0.7.0
   google_fonts: ^3.0.1
   pretty_dio_logger: ^1.2.0-beta-1
+  flutter_rating_bar: ^4.0.1
+  flutter_syntax_view: ^4.0.0
 
 dev_dependencies:
   flutter_test:
