finish login form with validation and much more

--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   pretty_dio_logger: ^1.2.0-beta-1
   flutter_rating_bar: ^4.0.1
   flutter_syntax_view: ^4.0.0
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.4.0
 
 dev_dependencies:
   flutter_test:
