--- a/mobile/codeblurb/pubspec.yaml
+++ b/mobile/codeblurb/pubspec.yaml
@@ -17,21 +17,23 @@ dependencies:
   intl: ^0.17.0
 
   cupertino_icons: ^1.0.2
-  auto_route: ^4.2.1
+  auto_route: ^5.0.4
   modal_bottom_sheet: ^2.1.0
-  flutter_svg: ^1.1.1+1
-  firebase_core: ^1.22.0
-  firebase_crashlytics: ^2.8.10
-  firebase_remote_config: ^2.0.17
-  firebase_analytics: ^9.3.4
+  flutter_svg: ^2.0.4
+  riverpod_annotation: ^2.0.2
+  riverpod_generator: ^2.1.4
+  firebase_core: ^2.7.1
+  firebase_crashlytics: ^3.0.16
+  firebase_remote_config: ^3.0.14
+  firebase_analytics: ^10.1.5
   shared_preferences: ^2.0.15
-  flutter_riverpod: ^2.0.0-dev.9
+  flutter_riverpod: ^2.3.2
   cached_network_image: ^3.2.2
   json_annotation: ^4.6.0
   freezed_annotation: ^2.1.0
   auto_size_text: ^3.0.0
-  dio: ^4.0.6
-  google_fonts: ^3.0.1
+  dio: ^5.0.2
+  google_fonts: ^4.0.3
   pretty_dio_logger: ^1.2.0-beta-1
   flutter_rating_bar: ^4.0.1
   flutter_syntax_view: ^4.0.0
@@ -43,11 +45,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  auto_route_generator: ^4.2.0
+  auto_route_generator: ^5.0.3
   build_runner: ^2.1.11
-  flutter_gen_runner: ^4.3.0
+  flutter_gen_runner: ^5.2.0
   freezed: ^2.1.0+1
-  flutter_gen: ^4.3.0
+  flutter_gen: ^5.2.0
   json_serializable: ^6.3.1
 
 flutter:
