--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -13,11 +13,13 @@
     "@tanstack/react-query-devtools": "^4.29.0",
     "@types/lodash": "^4.14.192",
     "@types/react-portal": "^4.0.4",
+    "axios": "^1.3.6",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "i18next-browser-languagedetector": "^7.0.1",
     "immer": "^9.0.21",
     "jotai": "^2.0.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
