--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.5.1",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.29.0",
     "@types/lodash": "^4.14.192",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-portal": "^4.0.4",
     "axios": "^1.3.6",
     "clsx": "^1.2.1",
@@ -23,6 +25,7 @@
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.2.0",
