--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -16,6 +16,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-portal": "^4.0.4",
     "axios": "^1.3.6",
+    "axios-auth-refresh": "^3.3.6",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "i18next-browser-languagedetector": "^7.0.1",
