--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@monaco-editor/react": "^4.5.1",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.29.0",
@@ -31,8 +36,12 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
+    "react-portal": "^4.2.2",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
+    "react-tooltip": "^5.13.1",
     "react-use": "^17.4.0",
+    "swiper": "^9.3.2",
     "tailwind-merge": "^1.12.0",
     "use-immer": "^0.9.0",
     "zustand": "^4.3.7"
@@ -40,6 +49,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-portal": "^4.0.4",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
