--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
+    "rc-slider": "^10.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
