--- a/codeblurb-web/package.json
+++ b/codeblurb-web/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.29.0",
     "@types/lodash": "^4.14.192",
+    "@types/qs": "^6.9.7",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-portal": "^4.0.4",
     "axios": "^1.3.6",
@@ -29,6 +30,7 @@
     "jotai": "^2.0.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "qs": "^6.11.2",
     "query-string": "^8.1.0",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
